--- a/src/components/fieldset/_fieldset.scss
+++ b/src/components/fieldset/_fieldset.scss
@@ -14,6 +14,9 @@
     font-family: $font-primary-bold;
     font-size: rem(16px);
     padding: 0;
-    margin-bottom: 16px;
+    width: 100%;
+    padding-bottom: 6px;
+    border-bottom: 2px solid #dedbdb;
+    margin-bottom: 22px;
   }
 }
