--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -49,7 +49,11 @@
 }
 
 .text-bold {
-  font-weight: 700;
+  font-family: $font-primary-bold;
+}
+
+.text-italic {
+  font-style: italic;
 }
 
 .grid {
