--- a/src/components/fieldset/_fieldset.scss
+++ b/src/components/fieldset/_fieldset.scss
@@ -16,7 +16,7 @@
     padding: 0;
     width: 100%;
     padding-bottom: 6px;
-    border-bottom: 2px solid #dedbdb;
+    border-bottom: 2px solid $color-border;
     margin-bottom: 22px;
   }
 }
