--- a/src/components/selectbox/_select-box.scss
+++ b/src/components/selectbox/_select-box.scss
@@ -58,8 +58,6 @@
   }
 }
 
-// .select-box__option .select-box__option--is-focused
-
 .custom-option {
   padding: 10px;
   display: flex;
@@ -83,4 +81,5 @@
   width: 24px;
   height: 24px;
   border-radius: 4px;
+  border: 1px solid transparent;
 }
