--- a/src/components/selectbox/_select-box.scss
+++ b/src/components/selectbox/_select-box.scss
@@ -61,7 +61,8 @@
 .custom-option {
   padding: 10px;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  gap: 12px;
   cursor: pointer;
 
   &.disabled {
