--- a/src/scss/globals/_extended-classnames.scss
+++ b/src/scss/globals/_extended-classnames.scss
@@ -2,7 +2,7 @@
 @use './variables' as *;
 @use './fonts' as *;
 
-%styled-input {
+%styled-input:not(.select-box__input) {
   background-color: $color-secondary;
   border: 0;
   height: $input-height;
