password-input-container style

--- a/src/components/formElements/password/_password-input.scss
+++ b/src/components/formElements/password/_password-input.scss
@@ -20,12 +20,13 @@
   &.error {
     color: $color-danger;
     gap: 8px;
+    flex-direction: row;
   }
 }
 
 .password-popup-container {
   position: absolute;
-  top: -178px;
+  top: -198px;
   background-color: $color-white;
   z-index: 2;
   box-shadow: $box-shadow;
