--- a/src/scss/_input-controls.scss
+++ b/src/scss/_input-controls.scss
@@ -47,7 +47,7 @@ input[type='checkbox'] {
 
 .checkbox-list {
   display: flex;
-  justify-content: space-between;
+  gap: 20px;
 }
 
 .checkbox-radio-container {
