checkbox-label-container => form-span-container

--- a/src/scss/_input-controls.scss
+++ b/src/scss/_input-controls.scss
@@ -89,7 +89,7 @@ input[type='checkbox'] {
   }
 }
 
-.checkbox-label-container {
+.form-span-container {
   justify-content: flex-start;
   gap: 20px;
 }
