--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -42,7 +42,7 @@ textarea {
   min-height: rem(128px);
 }
 
-.checkbox-label-container,
+.form-span-container,
 .form-label-container {
   display: flex;
   justify-content: space-between;
