--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -61,6 +61,12 @@
   font-style: italic;
 }
 
+.text-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .grid {
   display: grid;
   gap: 16px;
