--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -35,6 +35,11 @@
   flex: 2;
   gap: 8px;
 
+  .dropdown-container {
+    position: absolute;
+    right: 14px;
+  }
+
   .preview-item {
     display: flex;
     border: 1px solid $color-border;
@@ -57,6 +62,11 @@
     padding: 20px;
     gap: 24px;
 
+    .dropdown-container {
+      right: -15px;
+      top: 0;
+    }
+
     .preview-item {
       border: transparent;
       padding: 0;
@@ -64,10 +74,11 @@
 
     .btn-ghost {
       top: -12px;
-      right: -2px;
+      right: 11px;
       background: #ba1b1b;
       color: #fff;
       padding: 4px;
+      position: absolute;
     }
   }
 
@@ -79,10 +90,5 @@
 
   .preview-size {
     color: $color-gray-60;
-  }
-
-  .btn {
-    position: absolute;
-    right: 16px;
   }
 }
