--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -1,5 +1,10 @@
 @use '../../scss/globals' as *;
 
+.dropdown-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .dropdown-content {
   position: absolute;
   z-index: 1;
