--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -69,7 +69,7 @@
 
 .grid {
   display: grid;
-  gap: 16px;
+  gap: 30px;
 
   &.two-col {
     grid-template-columns: repeat(2, 1fr);
@@ -126,4 +126,13 @@
   height: 1px;
   display: flex;
   background-color: $color-gray-80;
+}
+
+.card {
+  background-color: $color-white;
+  border-radius: 4px;
+  box-shadow: $box-shadow;
+  margin-bottom: 12px;
+  width: 100%;
+  padding: 24px;
 }
