--- a/src/scss/_error.scss
+++ b/src/scss/_error.scss
@@ -6,7 +6,8 @@
   align-items: center;
   color: currentcolor;
   flex-direction: column;
-  margin-bottom: 8px;
+  height: 100%;
+  justify-content: center;
 
   .btn {
     max-width: 300px;
