--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -34,7 +34,7 @@ form {
   box-shadow: $box-shadow;
   margin-bottom: 12px;
   width: 100%;
-  padding: 24px;
+  padding: 16px 24px;
 }
 
 textarea {
