--- a/src/scss/_error.scss
+++ b/src/scss/_error.scss
@@ -10,6 +10,10 @@
   justify-content: center;
   padding-block: 20px;
 
+  .emoji {
+    max-width: rem(200px);
+  }
+
   .btn {
     max-width: 300px;
   }
@@ -21,12 +25,6 @@
   .error-info {
     margin: 0;
   }
-
-  &.error-boundary {
-    .emoji {
-      max-width: rem(120px);
-    }
-  }
 }
 
 .error-page {
@@ -35,6 +33,10 @@
   align-items: center;
   min-height: 100dvh;
   padding: 20px;
+
+  .emoji {
+    max-width: 100%;
+  }
 
   .error {
     flex-direction: column;
