--- a/src/components/skeleton/_skeleton.scss
+++ b/src/components/skeleton/_skeleton.scss
@@ -53,11 +53,15 @@
   );
 }
 
-.skeleton-page {
+.skeleton-column {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 16px;
+
+  &.skeleton-page {
+    gap: 32px;
+  }
 }
 
 .skeleton-card {
