--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -40,6 +40,10 @@
   justify-content: flex-end;
 }
 
+.justify-space-between {
+  justify-content: space-between;
+}
+
 .column {
   flex-direction: column;
 }
