--- a/src/components/skeleton/_skeleton.scss
+++ b/src/components/skeleton/_skeleton.scss
@@ -6,6 +6,10 @@
   display: flex;
   gap: 12px;
   flex-direction: column;
+
+  .page-card {
+    min-height: rem(400px);
+  }
 }
 
 .skeleton-header {
