--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -24,6 +24,7 @@ $color-gray-90: #020101;
 $color-light-gray-10: #fdfefe;
 $color-light-gray-20: #f9f9f9;
 $color-light-gray-30: #f4f4f5;
+$color-light-gray-40: #e9e9ea;
 
 /* colors */
 $color-border: $color-gray-30;
