--- a/src/components/selectbox/_select-box.scss
+++ b/src/components/selectbox/_select-box.scss
@@ -71,7 +71,7 @@
   }
 
   &.selected {
-    background-color: $color-background-secondary;
+    background-color: $color-gray-20;
   }
 
   &.focused {
