currenCy text and form info

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -139,3 +139,10 @@ textarea {
     margin-top: 20px;
   }
 }
+
+.input-info {
+  position: absolute;
+  z-index: 1;
+  top: 52%;
+  right: 12px;
+}
