--- a/src/components/formElements/toggleSwitch/_toggle-switch.scss
+++ b/src/components/formElements/toggleSwitch/_toggle-switch.scss
@@ -1,3 +1,5 @@
+@use '../../../scss/globals' as *;
+
 .toggle {
   position: relative;
   display: inline-block;
@@ -14,7 +16,8 @@
   background-color: #fd632f;
   border-radius: 99px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+
+  @include transition;
 
   &::after {
     content: '';
@@ -25,7 +28,8 @@
     height: 26px;
     background-color: #fff;
     border-radius: 50%;
-    transition: left 0.3s ease;
+
+    @include transition;
   }
 }
 
