--- a/src/components/formElements/toggleSwitch/_toggle-switch.scss
+++ b/src/components/formElements/toggleSwitch/_toggle-switch.scss
@@ -11,9 +11,9 @@
 
 .toggle-label {
   display: block;
-  width: 60px;
-  height: 30px;
-  background-color: $color-background-secondary;
+  width: 47px;
+  height: 25px;
+  background-color: $color-gray-40;
   border-radius: 99px;
   cursor: pointer;
 
@@ -24,8 +24,8 @@
     position: absolute;
     top: 2px;
     left: 2px;
-    width: 26px;
-    height: 26px;
+    width: 20px;
+    height: 20px;
     background-color: #fff;
     border-radius: 50%;
 
@@ -34,9 +34,15 @@
 }
 
 .toggle-input:checked + .toggle-label {
-  background-color: $color-gray-40;
+  background-color: $color-background-secondary;
 
   &::after {
-    left: 32px;
+    left: 25px;
   }
+}
+
+.toggle-text {
+  position: absolute;
+  left: 51px;
+  top: 3px;
 }
