--- a/src/scss/_input-controls.scss
+++ b/src/scss/_input-controls.scss
@@ -141,3 +141,54 @@ input[type='checkbox'] {
     }
   }
 }
+
+.toggle-switch-list {
+  position: relative;
+  gap: 12px;
+  display: flex;
+  flex-direction: column;
+
+  label {
+    display: flex;
+    width: 47px;
+    height: 25px;
+    background-color: $color-gray-40;
+    border-radius: 99px;
+    cursor: pointer;
+
+    @include transition;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      width: 20px;
+      height: 20px;
+      background-color: #fff;
+      border-radius: 50%;
+
+      @include transition;
+    }
+
+    span {
+      position: absolute;
+      left: 52px;
+      top: 3px;
+    }
+  }
+
+  .checkbox-item:has(input:checked) {
+    label {
+      background-color: $color-background-secondary;
+
+      &::after {
+        left: 25px;
+      }
+    }
+  }
+
+  .checkbox-item {
+    position: relative;
+  }
+}
