edit input height

--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -34,7 +34,7 @@ table {
       padding: 4px;
       background-color: $color-white;
       border: 1px solid $color-gray-60;
-      min-height: $input-height;
+      height: $input-height;
     }
 
     .edit-controls {
