--- a/src/components/formElements/password/_password-input.scss
+++ b/src/components/formElements/password/_password-input.scss
@@ -6,8 +6,8 @@
 
   .toggle-icon-btn {
     position: absolute;
-    top: 32px;
-    right: 0;
+    top: 47px;
+    right: 40px;
   }
 }
 
@@ -26,7 +26,7 @@
 
 .password-popup-container {
   position: absolute;
-  top: -198px;
+  top: -164px;
   background-color: $color-white;
   z-index: 2;
   box-shadow: $box-shadow;
