--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -66,7 +66,7 @@
 
   .preview-img {
     width: rem(192px);
-    height: rem(76px);
+    height: rem(98px);
     object-fit: cover;
 
     @include transition;
@@ -88,12 +88,19 @@
     }
 
     .btn-ghost {
-      top: -12px;
-      right: 11px;
-      background: #ba1b1b;
-      color: #fff;
+      bottom: 0;
+      right: 0;
+      background-color: rgba($color-gray-60, 70%);
+      color: $color-white;
       padding: 4px;
       position: absolute;
+      width: 50px;
+      height: 40px;
+
+      &:focus-visible,
+      &:hover {
+        color: blue;
+      }
     }
   }
 
