--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -49,9 +49,18 @@
   flex: 2;
   gap: 8px;
 
-  .dropdown-container {
+  .btn-ghost {
+    color: $color-danger;
+    right: 0;
+    padding: 4px;
     position: absolute;
-    right: 14px;
+    width: 50px;
+    height: 40px;
+
+    &:focus-visible,
+    &:hover {
+      background-color: rgba($color-gray-60, 40%);
+    }
   }
 
   .preview-item {
@@ -78,11 +87,6 @@
     padding: 20px;
     gap: 24px;
 
-    .dropdown-container {
-      right: -15px;
-      top: 0;
-    }
-
     .preview-item {
       padding: 0;
     }
@@ -92,15 +96,6 @@
       right: 0;
       background-color: rgba($color-gray-60, 70%);
       color: $color-white;
-      padding: 4px;
-      position: absolute;
-      width: 50px;
-      height: 40px;
-
-      &:focus-visible,
-      &:hover {
-        color: blue;
-      }
     }
   }
 
