--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -36,13 +36,6 @@
   }
 }
 
-.gray-scaled {
-  opacity: 0.4;
-  filter: grayscale(1);
-
-  @include transition;
-}
-
 .preview-list {
   display: flex;
   flex-flow: column wrap;
@@ -96,6 +89,19 @@
       right: 0;
       background-color: rgba($color-gray-60, 70%);
       color: $color-white;
+    }
+
+    .gray-scaled {
+      img {
+        opacity: 0.4;
+        filter: grayscale(1);
+      }
+
+      .btn-ghost {
+        color: $color-primary;
+      }
+
+      @include transition;
     }
   }
 
