new class color

--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -8,6 +8,7 @@ $color-blue-30: #2f6d8f;
 
 // Red colors
 $color-red-10: #a0738f;
+$color-red-15: #b82845;
 $color-red-20: #88001b;
 $color-red-30: #793e5f;
 
