--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -74,6 +74,11 @@
   white-space: nowrap;
 }
 
+.text-line-through {
+  color: $color-red-15;
+  text-decoration: line-through;
+}
+
 .grid {
   display: grid;
   gap: 30px;
