--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -128,8 +128,10 @@ ul {
     @include outline(currentcolor);
   }
 
-  &:hover {
-    gap: 12px;
-    color: currentcolor;
+  @include min-size($large) {
+    &:hover {
+      gap: 12px;
+      color: currentcolor;
+    }
   }
 }
