--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -25,7 +25,7 @@ a[class^='btn-'],
   padding: 16px;
   border-radius: 4px;
   width: 100%;
-  border: 1px solid transparent;
+  border: 1px solid currentcolor;
   cursor: pointer;
   min-height: rem(60px);
   letter-spacing: rem(0.5px);
@@ -37,36 +37,6 @@ a[class^='btn-'],
     position: absolute;
     inset: -10px;
   }
-
-  &:not(.btn-ghost)::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0;
-    transform: scale(0.1, 0.1);
-
-    @include transition;
-  }
-
-  &:focus-visible::before,
-  &:hover::before {
-    opacity: 1;
-    transform: scale(1, 1);
-  }
-
-  &:focus-visible,
-  &:hover {
-    border-radius: 0;
-  }
-}
-
-.btn-text {
-  position: relative;
-  z-index: 2;
 }
 
 // Primary button
@@ -74,15 +44,16 @@ a[class^='btn-'],
   background-color: $color-primary;
   color: $color-secondary;
 
-  &:focus-visible,
   &:hover {
     color: $color-primary;
-    border-color: $color-gray-60;
+    background-color: $color-white;
+    border-color: $color-primary;
   }
 
-  &::before {
-    background-color: $color-white;
-    color: $color-primary;
+  &:focus-visible {
+    @include outline($color-primary);
+
+    border: 1px solid $color-white;
   }
 }
 
@@ -92,14 +63,15 @@ a[class^='btn-'],
   color: $color-primary;
   border-color: $color-primary;
 
-  &:focus-visible,
   &:hover {
-    border-color: transparent;
+    color: $color-light-gray-10;
+    background-color: $color-gray-70;
   }
 
-  &::before {
-    color: $color-light-gray-10;
-    background-color: $color-gray-20;
+  &:focus-visible {
+    @include outline(currentColor);
+
+    border: 1px solid $color-white;
   }
 }
 
@@ -112,21 +84,14 @@ a[class^='btn-'],
   min-height: auto;
   width: auto;
 
-  &:focus-visible,
   &:hover {
-    border-color: transparent;
+    background-color: $color-gray-30;
   }
 
-  &::before {
-    color: $color-light-gray-10;
-    background-color: $color-gray-20;
-  }
-}
+  &:focus-visible {
+    @include outline(currentColor);
 
-a.btn {
-  &:focus-visible,
-  &:hover {
-    color: $color-primary;
+    border: 1px solid $color-white;
   }
 }
 
@@ -139,11 +104,6 @@ a.btn {
   &:hover {
     color: $color-danger;
     border: 1px solid $color-danger;
-  }
-
-  &::before {
-    background: $color-white;
-    color: $color-danger;
   }
 }
 
