form styles cleanup new scss files

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @forward 'helper_classes';
 @forward 'animation';
 @forward 'error';
-@forward 'form';
+@forward 'form-elements';
+@forward 'form-error';
 @forward 'input-controls';
 @forward 'admin-card';
