--- a/src/scss/globals/_variables.scss
+++ b/src/scss/globals/_variables.scss
@@ -7,7 +7,7 @@ $medium: rem(1024px);
 $large: rem(1424px);
 $header-height: rem(74px);
 $input-height: rem(68px);
-$box-shadow: rgb(99 99 99 / 20%) 0 2px 8px 0;
+$box-shadow: rgb($color-gray-70, 0.2) 0 2px 8px 0;
 $padding-block-small: 4;
 $padding-block-medium: 12;
 $padding-block-large: 20;
