--- a/src/scss/globals/_variables.scss
+++ b/src/scss/globals/_variables.scss
@@ -8,6 +8,7 @@ $large: rem(1424px);
 $header-height: rem(74px);
 $input-height: rem(68px);
 $box-shadow: rgb($color-gray-70, 0.2) 0 2px 8px 0;
+$box-shadow-input: 0 0 4px 3px rgb($color-blue-30, 0.3);
 $padding-block-small: 4;
 $padding-block-medium: 12;
 $padding-block-large: 20;
