--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -80,6 +80,11 @@ a {
   text-decoration: none;
   position: relative;
   color: $color-red-30;
+  border: 2px solid transparent;
+
+  &:focus-visible {
+    outline: 2px solid currentcolor;
+  }
 }
 
 a:not(.btn) {
