--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -18,21 +18,24 @@
     height: 100%;
   }
 
+  .hero-btn-container {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .hero-btn-decoration {
+    height: 2px;
+    background: $color-red-30;
+    width: 100%;
+  }
+
   .btn-ghost {
     font-size: inherit;
     font-weight: bold;
     text-transform: uppercase;
     color: currentcolor;
-    width: 100%;
-
-    &::before {
-      content: '';
-      display: flex;
-      margin-right: 30px;
-      width: 80%;
-      border-bottom: 2px solid $color-red-30;
-      border-radius: 4px;
-    }
+    min-width: rem(60px);
   }
 
   .hero-content {
