--- a/src/components/dropdownBtn/_dropdown-btn.scss
+++ b/src/components/dropdownBtn/_dropdown-btn.scss
@@ -33,11 +33,16 @@
       background-color: $color-background;
     }
 
-    .btn {
+    .btn-ghost {
       display: flex;
       gap: 8px;
       justify-content: space-between;
       width: 100%;
+
+      &:hover,
+      &:focus-visible {
+        outline: transparent;
+      }
     }
   }
 }
