--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -6,10 +6,40 @@
 }
 
 .tooltip-content {
-  background-color: $color-white;
   padding: 8px;
   box-shadow: $box-shadow;
+  background-color: $color-light-gray-10;
   border-radius: 4px;
-  position: absolute;
   z-index: 2;
+}
+
+.arrow {
+  visibility: hidden;
+  background: inherit;
+
+  &::before {
+    visibility: visible;
+    content: '';
+    transform: rotate(45deg);
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    background: inherit;
+  }
+}
+
+.tooltip-content[data-popper-placement^='top'] > .arrow {
+  bottom: 4px;
+}
+
+.tooltip-content[data-popper-placement^='bottom'] > .arrow {
+  top: -4px;
+}
+
+.tooltip-content[data-popper-placement^='left'] > .arrow {
+  right: -4px;
+}
+
+.tooltip-content[data-popper-placement^='right'] > .arrow {
+  left: -4px;
 }
