--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -33,13 +33,28 @@
 }
 
 .tooltip-content[data-popper-placement^='bottom'] > .arrow {
-  top: -4px;
+  top: 4px;
 }
 
 .tooltip-content[data-popper-placement^='left'] > .arrow {
-  right: -4px;
+  right: 4px;
 }
 
 .tooltip-content[data-popper-placement^='right'] > .arrow {
-  left: -4px;
+  left: 4px;
+}
+
+.dropdown-content-footer {
+  display: flex;
+  gap: 4px;
+
+  .btn {
+    min-height: auto;
+    font-size: rem(14px);
+    padding: 8px;
+  }
+}
+
+.test {
+  max-width: 200px;
 }
