--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -5,12 +5,25 @@
   justify-content: flex-end;
 }
 
+$placements: (
+  top: bottom,
+  bottom: top,
+  left: right,
+  right: left,
+);
+
 .tooltip-container {
   padding: 8px;
   box-shadow: $box-shadow;
   background-color: $color-light-gray-10;
   border-radius: 4px;
   z-index: 2;
+
+  @each $placement, $side in $placements {
+    &[data-popper-placement^='#{$placement}'] > .arrow {
+      #{$side}: 4px;
+    }
+  }
 }
 
 .arrow {
@@ -26,22 +39,6 @@
     height: 8px;
     background: inherit;
   }
-}
-
-.tooltip-container[data-popper-placement^='top'] > .arrow {
-  bottom: 4px;
-}
-
-.tooltip-container[data-popper-placement^='bottom'] > .arrow {
-  top: 4px;
-}
-
-.tooltip-container[data-popper-placement^='left'] > .arrow {
-  right: 4px;
-}
-
-.tooltip-container[data-popper-placement^='right'] > .arrow {
-  left: 4px;
 }
 
 .dropdown-content-footer {
