--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -129,9 +129,8 @@
 
 .footer {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 24px;
+  gap: 12px;
+  margin-top: 12px;
 }
 
 .separator {
