--- a/src/components/authForm/_auth-form.scss
+++ b/src/components/authForm/_auth-form.scss
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: rem(500px);
+  max-width: $page-width-small;
   margin-top: 32px;
 
   .auth-btn {
