--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -1,18 +1,13 @@
 @use '../../scss/globals/' as *;
 
-.main-header:not(.admin-container .main-header) {
-  @include max-size($small) {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    z-index: 8;
-  }
-}
-
 .main-header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @include max-size($small) {
+    flex-direction: column;
+  }
 
   .logo {
     svg {
