--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -5,10 +5,6 @@
   justify-content: space-between;
   align-items: center;
 
-  @include max-size($small) {
-    flex-direction: column;
-  }
-
   .logo {
     svg {
       height: 24px;
@@ -19,6 +15,12 @@
   .dropdown-item {
     min-width: rem(200px);
   }
+}
+
+.welcome-message-container {
+  display: flex;
+  gap: 8px;
+  align-items: center;
 }
 
 .header-icon-list {
