--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -27,11 +27,11 @@
   .main-header {
     height: $header-height;
 
-    .btn {
-      max-width: rem(100px);
-      padding-block: 12px;
-      min-height: auto;
-    }
+    // .btn {
+    //   max-width: rem(100px);
+    //   padding-block: 12px;
+    //   min-height: auto;
+    // }
   }
 
   .page-header {
