--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -5,10 +5,19 @@
   justify-content: space-between;
   align-items: center;
 
+  @include max-size($small) {
+    flex-direction: column;
+  }
+
   .logo {
     svg {
-      height: 24px;
+      height: rem(24px);
       width: rem(260px);
+
+      @include max-size($small) {
+        height: rem(16px);
+        width: rem(180px);
+      }
     }
   }
 
