--- a/src/scss/_menu-burger.scss
+++ b/src/scss/_menu-burger.scss
@@ -10,6 +10,17 @@ $burger-placement: -8px;
 }
 
 .menu-burger {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+
+  &.btn-ghost {
+    &:hover,
+    &:focus-visible {
+      outline: transparent;
+    }
+  }
+
   .menu-burger-item {
     @extend %burger-basic;
     @include transition;
