--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -24,7 +24,7 @@
     margin-top: 0;
   }
 
-  .main-header {
+  .admin-header {
     height: $header-height;
     display: flex;
     align-items: center;
